--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                                 </state>
                                 <state key="highlighted" image="list"/>
                                 <connections>
-                                    <segue destination="nhD-o7-srJ" kind="show" id="gwI-fi-e7N"/>
+                                    <action selector="tapShowList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9OF-Hr-y9g"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -150,6 +150,7 @@
                         <outlet property="showListButton" destination="lx0-SS-lNg" id="p3J-tW-HIQ"/>
                         <outlet property="switchButton" destination="Ox4-w2-oTz" id="v08-ys-5xA"/>
                         <outlet property="totalTimeLabel" destination="gZq-S3-fWn" id="st7-TN-zTD"/>
+                        <segue destination="nhD-o7-srJ" kind="show" identifier="ShowList" id="ouC-QI-ifs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
