--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -262,10 +262,15 @@
                                     <constraint firstAttribute="bottom" secondItem="KQS-wS-Yjb" secondAttribute="bottom" id="brl-Ba-Puf"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8D0-GW-COg" userLabel="button view">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8D0-GW-COg" userLabel="button view">
                                 <rect key="frame" x="0.0" y="534" width="375" height="133"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JTg-Hj-Nxi" userLabel="back to camera">
+                                    <view alpha="0.5" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Frt-C7-8Mk" userLabel="transparentbg">
+                                        <rect key="frame" x="0.0" y="-3" width="375" height="143"/>
+                                        <animations/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <button opaque="NO" alpha="0.69999999999999996" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JTg-Hj-Nxi" userLabel="back to camera">
                                         <rect key="frame" x="25" y="34" width="66" height="66"/>
                                         <animations/>
                                         <constraints>
@@ -279,7 +284,7 @@
                                             <action selector="backToCamera:" destination="nhD-o7-srJ" eventType="touchUpInside" id="W2f-dO-SVH"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAv-ct-ArT">
+                                    <button opaque="NO" alpha="0.69999999999999996" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAv-ct-ArT">
                                         <rect key="frame" x="197" y="34" width="66" height="66"/>
                                         <animations/>
                                         <constraints>
@@ -290,7 +295,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
-                                    <button opaque="NO" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qp-v4-9Sv">
+                                    <button opaque="NO" alpha="0.69999999999999996" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qp-v4-9Sv">
                                         <rect key="frame" x="283" y="34" width="66" height="66"/>
                                         <animations/>
                                         <constraints>
@@ -304,7 +309,7 @@
                                             <action selector="tapExport:" destination="nhD-o7-srJ" eventType="touchUpInside" id="dDS-d7-lRw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZR8-37-cdL">
+                                    <button opaque="NO" alpha="0.69999999999999996" contentMode="center" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZR8-37-cdL">
                                         <rect key="frame" x="111" y="34" width="66" height="66"/>
                                         <animations/>
                                         <constraints>
@@ -320,7 +325,6 @@
                                     </button>
                                 </subviews>
                                 <animations/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="1qp-v4-9Sv" secondAttribute="trailing" constant="26" id="CJs-O9-zWe"/>
                                     <constraint firstItem="JTg-Hj-Nxi" firstAttribute="leading" secondItem="8D0-GW-COg" secondAttribute="leading" constant="25" id="Fkk-Ep-lg1"/>
@@ -330,7 +334,7 @@
                                     <constraint firstItem="JTg-Hj-Nxi" firstAttribute="centerY" secondItem="8D0-GW-COg" secondAttribute="centerY" id="weE-oB-8lV"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kMK-Kl-gUt">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kMK-Kl-gUt">
                                 <rect key="frame" x="0.0" y="134" width="375" height="400"/>
                                 <animations/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="Ewi-8X-mRi" customClass="CollectionViewPagingFlowLayout" customModule="Camera" customModuleProvider="target">
@@ -391,12 +395,16 @@
                         <color key="backgroundColor" red="0.11416656523942947" green="0.0938887819647789" blue="0.10201955586671829" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="kMK-Kl-gUt" secondAttribute="trailing" constant="-20" id="4xM-bs-Txi"/>
+                            <constraint firstItem="kMK-Kl-gUt" firstAttribute="leading" secondItem="nYb-nR-g9O" secondAttribute="leadingMargin" constant="-20" id="Eg6-Fi-boD"/>
                             <constraint firstItem="8D0-GW-COg" firstAttribute="leading" secondItem="nYb-nR-g9O" secondAttribute="leadingMargin" constant="-20" id="F2X-Vk-Yrk"/>
                             <constraint firstItem="fub-dA-U8I" firstAttribute="top" secondItem="8D0-GW-COg" secondAttribute="bottom" id="GGF-Fd-Sww"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2Ib-QF-vnj" secondAttribute="trailing" constant="-20" id="JbR-MU-836"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8D0-GW-COg" secondAttribute="trailing" constant="-20" id="KNq-Nv-NLW"/>
                             <constraint firstItem="2Ib-QF-vnj" firstAttribute="top" secondItem="P3o-jb-RxK" secondAttribute="bottom" id="UBA-f7-Kd5"/>
                             <constraint firstItem="2Ib-QF-vnj" firstAttribute="leading" secondItem="nYb-nR-g9O" secondAttribute="leadingMargin" constant="-20" id="WHY-Eh-11y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Frt-C7-8Mk" secondAttribute="trailing" constant="-20" id="nVh-a7-iBo"/>
+                            <constraint firstItem="Frt-C7-8Mk" firstAttribute="leading" secondItem="nYb-nR-g9O" secondAttribute="leadingMargin" constant="-20" id="xAv-IH-YPL"/>
                             <constraint firstItem="fub-dA-U8I" firstAttribute="top" secondItem="2Ib-QF-vnj" secondAttribute="bottom" id="zhw-z2-P5r"/>
                         </constraints>
                     </view>
@@ -609,15 +617,15 @@
         </scene>
     </scenes>
     <resources>
-        <image name="backtocamera" width="43" height="36"/>
+        <image name="backtocamera" width="44" height="36"/>
         <image name="checkmark" width="48" height="37"/>
         <image name="cross" width="48" height="37"/>
         <image name="flip" width="64" height="64"/>
         <image name="list" width="64" height="64"/>
-        <image name="playpause" width="43" height="34"/>
-        <image name="save" width="35" height="34"/>
+        <image name="playpause" width="36" height="28"/>
+        <image name="save" width="32" height="28"/>
         <image name="spectrum" width="5" height="333"/>
-        <image name="trash-1" width="39" height="35"/>
+        <image name="trash-1" width="26" height="26"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="k9c-xf-l9r"/>
